Prevent scroll on mobile

--- a/css/sidebar/sidebar.css
+++ b/css/sidebar/sidebar.css
@@ -178,6 +178,7 @@
     cursor: pointer;
     z-index: 7;
     margin-top: -2.5px;
+    overflow-x:hidden !important;
   }
 
   .sidebar-toggle:before {
